2006-10-05  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (Tcl_LappendObjCmd):
	* tests/append.test(4.21-22): fix for longstanding [Bug 1570718],
	lappending nothing to non-list. Reported by lvirden

2006-10-04  Kevin Kenny  <kennykb@acm.org>

	* tzdata/: Olson's tzdata2006m.
	
2006-10-01  Kevin Kenny  <kennykb@acm.org>

	* tests/clock.test (clock-49.2): Removed a locale dependency
	that caused a spurious failure in the German locale. [Bug 1567956]
	
2006-10-01  Miguel Sofer  <msofer@users.sf.net>

	* doc/Eval.3 (TclEvalObjv): added note on refCount management for
	the elements of objv, [Bug #730244].

2006-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tclWinFile.c: Handle possible missing define.
	
	* win/tclWinFile.c (TclpUtime): bug #1420432 - file mtime fails
	* tests/cmdAH.test:	        for directories on windows

	* tests/winFile.test: Handle Msys environment a little differently
	in getuser function. Fix for bug 1567956.

2006-09-30  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclUtil.c (Tcl_SplitList): optimisation, [Patch 1344747]
	by dgp.

	* generic/tclInt.decls:
	* generic/tclInt.h:
	* generic/tclIntDecls.h:
	* generic/tclObj.c:
	* generic/tclStubInit.c: added an internal function
	TclObjBeingDeleted to provide info as to the reason for the loss
	of an internal rep. [FR 1512138]

	* generic/tclCompile.c:
	* generic/tclHistory.c:
	* generic/tclInt.h: 
	* generic/tclProc.c: made Tcl_RecordAndEvalObj not call "history" 
	if it has been redefined to an empty proc, in order to reduce the
	noise when debugging [FR 1190441]. Moved TclCompileNoOp from
	tclProc.c to tclCompile.c 

2006-09-28  Andreas Kupries  <andreask@activestate.com>

	* generic/tclPkg.c (CompareVersions): Bugfix. Check string lengths
	* tests/pkg.test: before comparison. The shorter string is the
	  smaller number. Added testcases as well. Interestingly all
	  existing test cases for vcompare compared numbers of the same